--- a/package.json
+++ b/package.json
@@ -10,10 +10,17 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "animate.css": "^4.0.0",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.13.1",
+    "highlight.js": "^10.0.2",
+    "mockjs": "^1.1.0",
     "moment": "^2.25.3",
+    "node-emoji": "^1.10.0",
+    "qrcode.vue": "^1.7.0",
+    "simplemde": "^1.11.2",
+    "vee-validate": "^3.3.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
     "vuex": "^3.3.0"
