--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.13.1",
+    "font-awesome": "^4.7.0",
     "highlight.js": "^10.0.2",
     "mockjs": "^1.1.0",
     "moment": "^2.25.3",
